5_hackazon/ingress_hackazon.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hackazon-ingress
  namespace: hackazon
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - hackazon.schuler.io
    secretName: default-server-secret-hackazon
  rules:
  - host: hackazon.schuler.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hackazon
          servicePort: 80
